--- a/themes/unishop/web/css/styles.css
+++ b/themes/unishop/web/css/styles.css
@@ -8457,7 +8457,8 @@ button.close {
 }
 
 .icon-magnifier:before {
-    content: "\e035"
+    content: "\e035";
+    color: #2BA8DB;
 }
 
 .icon-magnifier-minus:before {
@@ -10012,6 +10013,10 @@ ul.large, ol.large {
     outline: 0
 }
 
+.search-bar .btn-outlined-invert {
+    cursor: inherit;
+}
+
 .btn-outlined-invert:hover {
     border-color: transparent;
     background: #fff;
@@ -10305,7 +10310,7 @@ header {
 header .left-bg {
     position: absolute;
     background: #2f343b;
-    width: 70%;
+    width: 60%;
     height: 144px;
     left: 0
 }
@@ -10313,7 +10318,7 @@ header .left-bg {
 header .right-bg {
     position: absolute;
     background: #2ba8db;
-    width: 30%;
+    width: 40%;
     height: 144px;
     right: 0
 }
@@ -10471,10 +10476,11 @@ header .search-form .close-search:hover {
     position: absolute;
     z-index: 3;
     top: 0;
-    right: 15px;
+    right: -45px;
     height: 144px;
     background: #2ba8db;
-    padding: 12px 0 12px 3px
+    padding: 5px 0 12px 3px;
+    width: 350px;
 }
 
 .toolbar .search-btn, .toolbar .middle-btns, .toolbar .cart-btn {
@@ -10493,9 +10499,6 @@ header .search-form .close-search:hover {
     transition: background 0.2s ease, color 0.2s ease
 }
 
-.toolbar button:hover, .toolbar a:hover {
-    color: #2ba8db !important
-}
 
 .toolbar button:focus, .toolbar a:focus {
     color: #fff
@@ -10514,20 +10517,94 @@ header .search-form .close-search:hover {
 }
 
 .toolbar .search-btn {
-    height: 120px;
+    height: 53px;
     padding: 11px 0 0 0;
-    width: 60px
+    width: 274px;
+    margin-top: 11px;
+    margin-left: 12px;
+    position: relative;
+    background: #fff;
 }
 
 .toolbar .cart-btn {
     position: relative;
-    height: 118px;
-    width: 110px;
-    margin: 0 0 0 12px
+    height: 53px;
+    width: 112px;
+    margin: 12px 0 0 12px
 }
 
 .toolbar .cart-btn:hover .cart-dropdown {
     display: block
+}
+
+
+.phone-label {
+    position: absolute;
+    padding: 9px 10px 16px 51px;
+    height: 52px;
+    background: #a3c756;
+    top: 145px;
+    left: 0px;
+    font-size: 23px;
+    color: #fff;
+    font-weight: 900;
+    border-radius: 0 0 10px 10px;
+    width: 290px;
+}
+
+.phone-label .fa-phone {
+    vertical-align: middle;
+}
+
+.small-header .phone-label {
+    width: 224px;
+    padding: 13px 10px 11px 39px;
+    font-size: 18px;
+}
+
+/*  input[type="text"]::-webkit-input-placeholder {
+    color: #fff;
+   } 
+
+   input[type="text"]::-moz-placeholder {
+    color: #fff;
+   }*/
+
+.search-bar form .form-control {
+    position: absolute;
+    box-shadow: none;
+    width: 99%;
+    height: 48px;
+    top: 0px;
+    right: 2px;
+    border: none !important;
+    padding-right: 60px;
+}
+
+.search-bar form .form-control:focus, .search-bar form .form-control:hover, .search-bar form .form-control:active {
+    border: none !important;
+    box-shadow: none;
+}
+
+
+
+.search-btn button[type=submit] {
+    position: absolute;
+    top: -4px;
+    right: -8px;
+    font-size: 1.7em;
+    background: none;
+    border: none;
+    padding: 8px 18px 0 0;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -webkit-transition: opacity .3s ease;
+    -moz-transition: opacity .3s ease;
+    transition: opacity .3s ease;
+} 
+
+.small-header .phone-label {
+    top: 73px;
 }
 
 @media only screen and (max-width: 991px) {
@@ -10538,10 +10615,13 @@ header .search-form .close-search:hover {
 
 .toolbar .cart-btn > .btn {
     margin: 0;
+    border-radius: 5px;
     position: absolute;
     padding: 43px 0 0 0;
     width: 100%;
-    min-height: 100%;
+    height: 53px;
+    padding-left: 25px;
+    padding-top: 14px;
     text-align: center;
     -webkit-transition: none;
     -moz-transition: none;
@@ -10553,10 +10633,12 @@ header .search-form .close-search:hover {
     margin-right: 0;
     font-size: 1.2em;
     font-weight: 300;
-    margin-top: -5px
+    margin-top: -5px;
+    float: left;
 }
 
 .toolbar .cart-btn > .btn i {
+    float: left;
     margin-left: 7px;
     -webkit-transition: color .2s ease;
     -moz-transition: color .2s ease;
@@ -10566,9 +10648,9 @@ header .search-form .close-search:hover {
 .toolbar .cart-btn:hover > .btn {
     color: #2ba8db;
     background: #fff;
-    -webkit-border-radius: 5px 5px 0 0;
-    -moz-border-radius: 5px 5px 0 0;
-    border-radius: 5px 5px 0 0
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
 }
 
 @media only screen and (max-width: 991px) {
@@ -10577,6 +10659,11 @@ header .search-form .close-search:hover {
         -moz-border-radius: 5px;
         border-radius: 5px
     }
+
+    .phone-label {
+        float: left;
+        width: 100% !important;
+    }
 }
 
 .toolbar .cart-btn:hover > .btn i {
@@ -10584,14 +10671,14 @@ header .search-form .close-search:hover {
 }
 
 .toolbar .search-btn i, .toolbar .cart-btn i {
-    font-size: 1.4em
+    font-size: 1.1em
 }
 
 .toolbar .middle-btns a, .toolbar .middle-btns button {
     display: block;
     position: relative;
     padding: 13px 10px 0 13px;
-    width: 140px;
+    width: 150px;
     height: 53px;
     text-align: left;
     font-weight: 300;
@@ -10602,12 +10689,19 @@ header .search-form .close-search:hover {
 .toolbar .middle-btns a i, .toolbar .middle-btns button i {
     margin-right: 12px;
     font-size: 1.5em;
+    padding-left: 5px;
     vertical-align: middle
 }
 
-.toolbar .login-btn {
-    margin-top: 12px
+.toolbar .middle-btns a span {
+    vertical-align: middle;
 }
+
+.toolbar .login-btn, .cart-btn .btn-outlined-invert {
+    margin-top: 12px;
+    cursor: pointer;
+}
+
 
 .social-login {
     margin-top: -10px
@@ -10649,9 +10743,10 @@ header .search-form .close-search:hover {
     width: 470px;
     background: #fff;
     border: 1px solid #2ba8db;
-    top: 132px;
+    top: 63px;
     right: -1px;
-    display: none
+    display: none;
+    z-index: 9999999;
 }
 
 .cart-dropdown .body {
@@ -10672,8 +10767,8 @@ header .search-form .close-search:hover {
 
 .cart-dropdown span {
     position: absolute;
-    width: 110px;
-    height: 18px;
+    width: 112px;
+    height: 15px;
     background-color: #fff;
     right: 0;
     top: -15px
@@ -10825,7 +10920,7 @@ header .search-form .close-search:hover {
 .small-header .left-bg {
     position: absolute;
     background: #2f343b;
-    width: 70%;
+    width: 60%;
     height: 72px;
     left: 0
 }
@@ -10833,7 +10928,7 @@ header .search-form .close-search:hover {
 .small-header .right-bg {
     position: absolute;
     background: #2ba8db;
-    width: 30%;
+    width: 40%;
     height: 72px;
     right: 0
 }
@@ -10869,7 +10964,9 @@ header .search-form .close-search:hover {
 
 .small-header .toolbar {
     height: 72px;
-    padding: 12px 0 12px 3px
+    padding: 12px 0 12px 3px;
+    width: 226px;
+    right: 13px;
 }
 
 .small-header .toolbar .search-btn, .small-header .toolbar .middle-btns, .small-header .toolbar .cart-btn {
@@ -10882,6 +10979,10 @@ header .search-form .close-search:hover {
 
 .small-header .toolbar .middle-btns a:first-child, .small-header .toolbar .middle-btns a i {
     display: none
+}
+
+.small-header .toolbar .middle-btns a:first-child, .small-header .toolbar .middle-btns a span {
+    display: block;
 }
 
 .small-header .toolbar .middle-btns a, .small-header .toolbar .search-btn {
@@ -10915,18 +11016,21 @@ header .search-form .close-search:hover {
 .small-header .toolbar .search-btn {
     height: 63px;
     padding: 0;
-    width: 30px
+    width: 30px;
+    display: none;
 }
 
 .small-header .toolbar .cart-btn {
     position: relative;
     height: 50px;
-    width: 110px;
-    margin: -2px 0 0 12px
+    width: 117px;
+    margin: -2px 0 0 24px
 }
 
 .small-header .toolbar .cart-btn > .btn {
-    padding: 10px 0 0 0
+    padding: 10px 0 0 0;
+    padding-top: 13px;
+    padding-left: 9px;
 }
 
 .small-header .toolbar .cart-btn > .btn span {
@@ -10937,7 +11041,7 @@ header .search-form .close-search:hover {
 }
 
 .small-header .toolbar .cart-btn > .btn i {
-    margin-left: 0
+    margin-left: 26px;
 }
 
 .small-header .toolbar .cart-btn > .btn:hover {
@@ -10951,7 +11055,7 @@ header .search-form .close-search:hover {
 
 .small-header .toolbar .cart-btn .cart-dropdown span {
     position: absolute;
-    width: 110px;
+    width: 117px;
     height: 14px;
     background-color: #fff;
     right: 0;
@@ -10984,6 +11088,17 @@ header .search-form .close-search:hover {
 }
 
 @media screen and (max-width: 640px) {
+    
+
+    header .left-bg {
+        width: 71%;
+    }
+
+    header .right-bg {
+        width: 29%;
+    }
+
+
     header .mobile-border {
         padding-right: 220px
     }
@@ -10998,7 +11113,7 @@ header .search-form .close-search:hover {
     }
 
     header .toolbar .middle-btns {
-        float: right
+        float: left;
     }
 
     header .toolbar .middle-btns a {
@@ -11006,15 +11121,14 @@ header .search-form .close-search:hover {
     }
 
     header .toolbar .cart-btn {
-        position: absolute;
-        float: none;
-        height: 52px;
+        float: left;
+        height: 25px;
         width: 70px;
-        margin-top: 64px
+        margin-top: 12px;
     }
 
     header .toolbar .cart-btn > .btn {
-        padding: 12px 0 0 0
+        padding: 12px 0 0 11px;
     }
 
     header .toolbar .cart-btn > .btn span {
@@ -11024,9 +11138,54 @@ header .search-form .close-search:hover {
         margin-top: -5px
     }
 
+    .toolbar .middle-btns a i, .toolbar .middle-btns button i {
+        padding-left: 0;
+    }
+
     header .toolbar .cart-btn > .btn i {
         margin-left: 0;
         font-size: 1.2em
+    }
+
+    .toolbar .search-btn {
+        height: 53px;
+        padding: 11px 0 0 0;
+        width: 152px;
+        margin-top: 11px;
+        margin-left: 12px;
+        position: relative;
+        float: left;
+        clear: both;
+    }
+
+    .search-bar {
+        width: 171px;
+        right: 0 !important;
+    }
+
+    .phone-label {
+        width: 172px !important;
+        padding-left: 20px;
+padding-top: 15px;
+        font-size: 16px;
+        left: 0px;
+    }
+
+    .small-header .toolbar .cart-btn > .btn i {
+        margin-left: 19px;
+    }
+
+    .small-header .phone-label {
+        padding-left: 24px;
+    }
+
+
+
+    .small .phone-label {
+        width: 173px !important;
+        padding-left: 26px;
+        font-size: 16px;
+        left: 0px;
     }
 
     .small-header .toolbar button, .small-header .toolbar a, .small-header .toolbar .middle-btns {
@@ -11054,6 +11213,21 @@ header .search-form .close-search:hover {
     .small-header .toolbar .login-btn {
         padding-left: 0
     }
+
+    .small-header .right-bg {
+        width: 36%;
+    }
+
+    .small-header .left-bg {
+        width: 64%;
+    }
+
+    .small-header .phone-label {
+        left: 0;
+        width: 202px !important;
+    }
+
+
 }
 
 @media only screen and (max-width: 480px) {
@@ -11074,11 +11248,22 @@ header .search-form .close-search:hover {
     .small-header .toolbar .cart-btn .btn {
         width: 70px !important;
         font-size: 1.2em;
-        padding-top: 12px
+        padding-top: 12px;
+        padding-left: 0px;
+    }
+
+    .small-header .toolbar .cart-btn > .btn i {
+        margin-left: 13px;
     }
 
     .small-header .toolbar .login-btn {
         margin-left: 8px
+    }
+
+    .small-header .phone-label {
+        font-size: 15px;
+        padding: 13px 10px 11px 16px;
+        width: 162px !important;
     }
 }
 
@@ -11486,6 +11671,37 @@ header .search-form .close-search:hover {
         display: none
     }
 }
+
+@media only screen and (min-width: 891px) and (max-width: 992px) {
+    header .left-bg {
+        width: 65%;
+    }
+    header .right-bg {
+        width: 35%;
+    }
+
+    .small-header .toolbar .cart-btn {
+    margin: -2px 0 0 20px;
+}
+    
+}
+
+@media only screen and (min-width: 641px) and (max-width: 992px) {
+    .phone-label {
+        width: 290px !important;
+    }
+    .small-header .left-bg {
+        width: 77%;
+    }
+    .small-header .right-bg {
+        width: 23%;
+    }
+
+    .small-header .phone-label {
+        width: 223px !important;
+    }
+}
+
 
 .category-slider .ms-slide .text-block .btn {
     margin-right: 20px;
@@ -11995,7 +12211,8 @@ header .search-form .close-search:hover {
 
 .menu .catalog {
     border-bottom: none;
-    padding: 8px 0 0 0
+    padding: 8px 0 0 0;
+    text-align: left;
 }
 
 .menu .catalog li {
@@ -12042,7 +12259,8 @@ header .search-form .close-search:hover {
 .menu .catalog li a {
     padding: 9px 14px 20px 14px;
     color: #fff;
-    background: none
+    background: none;
+    text-decoration: underline;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -12992,7 +13210,7 @@ header .search-form .close-search:hover {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
-    background: #2ba8db;
+    background: #a3c756 !important;
     color: #fff;
     text-align: center;
     font-size: 1.375em;
@@ -13003,7 +13221,7 @@ header .search-form .close-search:hover {
 }
 
 .catalog-single .buttons .qnt-count .incr-btn:hover {
-    background: #1f89b4;
+    background: #709327 !important;
     text-decoration: none
 }
 
@@ -13833,7 +14051,7 @@ header .search-form .close-search:hover {
 
 .shopping-cart table td.qnt-count .form-control, .wishlist table td.qnt-count .form-control {
     display: inline-block;
-    width: 36px;
+    width: 34px;
     height: 38px;
     margin: 0 2px;
     padding-left: 3px;
@@ -15895,4 +16113,28 @@ header .search-form .close-search:hover {
 
 iframe[name="google_conversion_frame"] {
     display: none !important;
+}
+
+.colorlist {
+    list-style: none;
+    margin-bottom: 20px;
+    padding-left: 0;
+    font-size: 16px;
+}
+
+
+.colorlist a {
+    color: #2BA8DB;
+    cursor: pointer;
+    padding-left: 30px;
+}
+
+
+
+.colorlist li a {
+    background: url("../images/radio1.png") 0 2px no-repeat;
+}
+
+.colorlist li a.active  {
+    background: url("../images/radio2.png") 0 2px no-repeat;
 }
